syntax = "proto3";

package hello;

// Specify the Go package path
option go_package = "./server";

message HelloRequest{
    string name = 1;
}

message HelloResponse{
    string message = 1;
}

// The service definition
service Greeter{
    rpc SayHello(HelloRequest) returns (HelloResponse);
}